--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -1,3 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?eclipse version="3.0"?><plugin>
+<?eclipse version="3.0"?>
+<plugin>
+  <extension point="org.knime.product.splashExtension">
+    <splashExtension
+          icon="icons/fsk48.png"
+          icon24="icons/fsk24.png"
+          icon32="icons/fsk32.png"
+          id="de.bund.bfr.knime.fsklab.splashExtension"
+          tooltip="BfR.bund.de FSK Lab"
+          >
+    </splashExtension>
+  </extension>
 </plugin>
