--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -2,4 +2,5 @@ javacDefaultEncoding.. = UTF-8
 bin.includes = plugin.xml,\
                META-INF/,\
                js-src/,\
-               icons/
+               icons/,\
+               libs/
