--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <?eclipse version="3.0"?>
 <plugin>
+
+  <!-- Splash extension to be shown when launching KNIME -->
   <extension point="org.knime.product.splashExtension">
     <splashExtension
-          icon="icons/fsk48.png"
-          icon24="icons/fsk24.png"
-          icon32="icons/fsk32.png"
-          id="de.bund.bfr.knime.fsklab.splashExtension"
-          tooltip="BfR.bund.de FSK Lab"
-          >
+      icon="icons/fsk48.png"
+      icon24="icons/fsk24.png"
+      icon32="icons/fsk32.png"
+      id="de.bund.bfr.knime.fsklab.splashExtension"
+      tooltip="BfR.bund.de FSK Lab">
     </splashExtension>
+  </extension>
+
+  <!-- New category for FSK nodes -->
+  <extension point="org.knime.workbench.repository.categories">
+    <category
+  	  icon="icons/fsk48.png"
+  	  level-id="fsklab"
+  	  name="FSK-Lab"
+  	  path="/">
+  	</category>
+  </extension>
+  
+  <!-- FSK nodes -->
+  <extension point="org.knime.workbench.repository.nodes">
+    <node
+      category-path="/fsklab"
+      deprecated="false"
+      factory-class="de.bund.bfr.knime.fsklab.nodes.creator.FskCreatorNodeFactory">
+    </node>
   </extension>
 </plugin>
