Added Fskx Reader

--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -30,5 +30,10 @@
       deprecated="false"
       factory-class="de.bund.bfr.knime.fsklab.nodes.creator.FskCreatorNodeFactory">
     </node>
+    <node
+      category-path="/fsklab"
+      deprecated="false"
+      factory-class="de.bund.bfr.knime.fsklab.nodes.reader.FskxReaderNodeFactory">
+    </node>
   </extension>
 </plugin>
