Added Fsk Runner

--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -40,5 +40,10 @@
       deprecated="false"
       factory-class="de.bund.bfr.knime.fsklab.nodes.writer.FskxWriterNodeFactory">
     </node>
+    <node
+      category-path="/fsklab"
+      deprecated="false"
+      factory-class="de.bund.bfr.knime.fsklab.nodes.runner.FskRunnerNodeFactory">
+    </node>  
   </extension>
 </plugin>
