--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -3,4 +3,17 @@ bin.includes = plugin.xml,\
                META-INF/,\
                js-src/,\
                icons/,\
-               libs/
+               libs/,\
+               libs/CombineArchive-1.1.jar,\
+               libs/fskml-0.0.1-SNAPSHOT.jar,\
+               libs/jdom-2.0.1.jar,\
+               libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
+               libs/jsoup-1.9.2.jar,\
+               libs/pmfml-0.0.8.jar,\
+               libs/rengine-1.8.4.jar,\
+               libs/rserve-engine-1.8.4.jar,\
+               src/,\
+               legacy-src/de/,\
+               library.jar
+source.library.jar = src/,\
+                     legacy-src/
