--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -55,38 +55,6 @@
       deprecated="false"
       factory-class="de.bund.bfr.knime.fsklab.nodes.metadataeditor.FskMetadataEditorNodeFactory">
     </node>
-    
-	<!-- Legacy nodes from PmmLab -->    
-    <node
-      category-path="/fsklab"
-      deprecated="true"
-      factory-class="de.bund.bfr.knime.pmm.fskx.creator.FskCreatorNodeFactory">
-    </node>
-    <node
-      category-path="/fsklab"
-      deprecated="true"
-      factory-class="de.bund.bfr.knime.pmm.fskx.reader.FskxReaderNodeFactory">
-    </node>
-    <node
-      category-path="/fsklab"
-      deprecated="true"
-      factory-class="de.bund.bfr.knime.pmm.fskx.writer.FskxWriterNodeFactory">
-    </node>
-    <node
-      category-path="/fsklab"
-      deprecated="true"
-      factory-class="de.bund.bfr.knime.pmm.fskx.runner.FskRunnerNodeFactory">
-    </node>
-    <node
-      category-path="/fsklab"
-      deprecated="true"
-      factory-class="de.bund.bfr.knime.pmm.fskx.editor.FskEditorNodeFactory">
-    </node>
-    <node
-      category-path="/fsklab"
-      deprecated="true"
-      factory-class="de.bund.bfr.knime.pmm.fskx.editor.FskMetadataEditorNodeFactory">
-    </node>
   </extension>
   
   <!-- Preference initializer for custom R -->
@@ -111,10 +79,10 @@
       color="588C7E"
       hidden="false"
       name="FSK object"
-	  objectClass="de.bund.bfr.knime.fsklab.nodes.port.FskPortObject"
-	  objectSerializer="de.bund.bfr.knime.fsklab.nodes.port.FskPortObject$Serializer"
-	  specClass="de.bund.bfr.knime.fsklab.nodes.port.FskPortObjectSpec"
-	  specSerializer="de.bund.bfr.knime.fsklab.nodes.port.FskPortObjectSpec$Serializer"/>
+	  objectClass="de.bund.bfr.knime.pmm.fskx.port.FskPortObject"
+	  objectSerializer="de.bund.bfr.knime.pmm.fskx.port.FskPortObject$Serializer"
+	  specClass="de.bund.bfr.knime.pmm.fskx.port.FskPortObjectSpec"
+	  specSerializer="de.bund.bfr.knime.pmm.fskx.port.FskPortObjectSpec$Serializer"/>
   </extension>
   
   <!-- Javascript component for Fsk Metadata Editor node -->
