--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -13,7 +13,5 @@ bin.includes = plugin.xml,\
                libs/rengine-1.8.4.jar,\
                libs/rserve-engine-1.8.4.jar,\
                src/,\
-               legacy-src/de/,\
                library.jar
-source.library.jar = src/,\
-                     legacy-src/
+source.library.jar = src/,
