--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -55,6 +55,11 @@
       deprecated="false"
       factory-class="de.bund.bfr.knime.fsklab.nodes.metadataeditor.FskMetadataEditorNodeFactory">
     </node>
+    <node
+      category-path="/fsklab"
+	  deprecated="false"
+      factory-class="de.bund.bfr.knime.fsklab.nodes.fsk2r.FskToRNodeFactory">
+    </node>
   </extension>
   
   <!-- Preference initializer for custom R -->
