--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -60,6 +60,11 @@
 	  deprecated="false"
       factory-class="de.bund.bfr.knime.fsklab.nodes.fsk2r.FskToRNodeFactory">
     </node>
+    <node
+      category-path="/fsklab"
+      deprecated="false"
+      factory-class="de.bund.bfr.knime.fsklab.nodes.fsk2metadata.ExtractFskMetadataNodeFactory">
+    </node>
   </extension>
   
   <!-- Preference initializer for custom R -->
