Uses OmexMetaData handlers from fskml 1.0.2

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -5,7 +5,6 @@ bin.includes = plugin.xml,\
                icons/,\
                libs/,\
                libs/CombineArchive-1.1.jar,\
-               libs/fskml-0.0.1-SNAPSHOT.jar,\
                libs/jdom-2.0.1.jar,\
                libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
                libs/jsoup-1.9.2.jar,\
@@ -13,5 +12,6 @@ bin.includes = plugin.xml,\
                libs/rengine-1.8.4.jar,\
                libs/rserve-engine-1.8.4.jar,\
                src/,\
-               library.jar
+               library.jar,\
+               libs/fskml-1.0.2.jar
 source.library.jar = src/,
