--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="libs/jsoup-1.9.2.jar"/>
-	<classpathentry kind="lib" path="libs/rengine-1.8.4.jar"/>
-	<classpathentry kind="lib" path="libs/rserve-engine-1.8.4.jar"/>
-	<classpathentry kind="lib" path="libs/CombineArchive-1.1.jar"/>
-	<classpathentry kind="lib" path="libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar"/>
-	<classpathentry kind="lib" path="libs/pmfml-0.0.8.jar"/>
-	<classpathentry kind="lib" path="libs/jdom-2.0.1.jar"/>
-	<classpathentry kind="lib" path="libs/fskml-1.0.2.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/CombineArchive-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jdom-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jsoup-1.9.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/fskml-1.0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/pmfml-0.0.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/rengine-1.8.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/rserve-engine-1.8.4.jar"/>
+	<classpathentry kind="lib" path="libs/ooxml-schemas-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
