--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -12,6 +12,7 @@ bin.includes = plugin.xml,\
                libs/rengine-1.8.4.jar,\
                libs/rserve-engine-1.8.4.jar,\
                src/,\
-               library.jar,\
-               libs/fskml-1.0.2.jar
-source.library.jar = src/,
+               libs/fskml-1.0.2.jar,\
+               libs/ooxml-schemas-1.1.jar,\
+               library.jar
+source.library.jar = src/
