--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="poi-lib/poi-3.15.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi-lib/poi-ooxml-3.15.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi-lib/poi-ooxml-schemas-3.15.jar"/>
+	<classpathentry exported="true" kind="lib" path="poi-lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="poi-lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="poi-lib/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="poi-lib/commons-logging-1.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
@@ -11,6 +18,5 @@
 	<classpathentry exported="true" kind="lib" path="libs/pmfml-0.0.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/rengine-1.8.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/rserve-engine-1.8.4.jar"/>
-	<classpathentry kind="lib" path="libs/ooxml-schemas-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
