--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -13,6 +13,14 @@ bin.includes = plugin.xml,\
                libs/rserve-engine-1.8.4.jar,\
                src/,\
                libs/fskml-1.0.2.jar,\
-               libs/ooxml-schemas-1.1.jar,\
-               library.jar
+               library.jar,\
+               poi-lib/,\
+               poi-lib/poi-3.15.jar,\
+               poi-lib/poi-ooxml-3.15.jar,\
+               poi-lib/poi-ooxml-schemas-3.15.jar,\
+               poi-lib/xmlbeans-2.6.0.jar,\
+               poi-lib/commons-codec-1.10.jar,\
+               poi-lib/commons-collections4-4.1.jar,\
+               poi-lib/commons-logging-1.2.jar
 source.library.jar = src/
+bin.excludes = libs/ooxml-schemas-1.1.jar
