FskEditor: edit metadata

--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/pmfml-0.0.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/rengine-1.8.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/rserve-engine-1.8.4.jar"/>
+	<classpathentry kind="lib" path="libs/jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
