--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -12,7 +12,8 @@ bin.includes = plugin.xml,\
                libs/rengine-1.8.4.jar,\
                libs/rserve-engine-1.8.4.jar,\
                libs/fskml-1.0.2.jar,\
-               library.jar
+               library.jar,\
+               libs/jcalendar-1.4.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
