Revert "Remove models project"
This reverts commit 3dfc3b448f2272786c61e390cb237213dc1d7398.

Reverts FSK-Lab to POI fix (3 weeks after RAKIP Kickoff meeting).

Cannot restore to RAKIP Kickoff meeting code due to a merge, but
the code is mostly the same. Only the POI libraries change.

--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -132,16 +132,12 @@
       webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.metadataeditor.bundle">
       
       <!-- JS code -->
-      <webResource
-      	relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/metadataeditor/editor.js"
-      	relativePathTarget="editor.js">
+      <webResource relativePathSource="js-src/editor.js" relativePathTarget="editor.js">
       </webResource>
       <importResource relativePath="editor.js" type="JAVASCRIPT"></importResource>
       
       <!-- CSS code -->
-      <webResource
-      	relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/metadataeditor/editor.css"
-      	relativePathTarget="editor.css">
+      <webResource relativePathSource="js-src/editor.css" relativePathTarget="editor.css">
       </webResource>
       <importResource relativePath="editor.css" type="CSS"> </importResource>
       
