--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -8,7 +8,7 @@ bin.includes = plugin.xml,\
                libs/jdom-2.0.1.jar,\
                libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
                libs/jsoup-1.9.2.jar,\
-               libs/pmfml-0.0.8.jar,\
+               libs/pmfml-0.0.10.jar,\
                libs/rengine-1.8.4.jar,\
                libs/rserve-engine-1.8.4.jar,\
                libs/fskml-1.0.2.jar,\
@@ -17,3 +17,4 @@ bin.includes = plugin.xml,\
 jars.compile.order = library.jar
 output.library.jar = bin/
 source.library.jar = src/
+bin.excludes = libs/pmfml-0.0.8.jar
