--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -11,10 +11,10 @@ bin.includes = plugin.xml,\
                libs/pmfml-0.0.10.jar,\
                libs/rengine-1.8.4.jar,\
                libs/rserve-engine-1.8.4.jar,\
-               libs/fskml-1.0.2.jar,\
                libs/jcalendar-1.4.jar,\
-               library.jar
+               library.jar,\
+               libs/fskml-1.0.3.jar
 jars.compile.order = library.jar
 output.library.jar = bin/
 source.library.jar = src/
-bin.excludes = libs/pmfml-0.0.8.jar
+
