--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -8,12 +8,12 @@ bin.includes = plugin.xml,\
                libs/jdom-2.0.1.jar,\
                libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
                libs/jsoup-1.9.2.jar,\
-               libs/pmfml-0.0.10.jar,\
                libs/rengine-1.8.4.jar,\
                libs/rserve-engine-1.8.4.jar,\
                libs/jcalendar-1.4.jar,\
                library.jar,\
-               libs/fskml-1.0.3.jar
+               libs/fskml-1.0.3.jar,\
+               libs/pmfml-0.0.11.jar
 jars.compile.order = library.jar
 output.library.jar = bin/
 source.library.jar = src/
