--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -12,8 +12,8 @@ bin.includes = plugin.xml,\
                libs/rserve-engine-1.8.4.jar,\
                libs/jcalendar-1.4.jar,\
                library.jar,\
-               libs/fskml-1.0.3.jar,\
-               libs/pmfml-0.0.11.jar
+               libs/pmfml-0.0.11.jar,\
+               libs/fskml-1.0.4.jar
 jars.compile.order = library.jar
 output.library.jar = bin/
 source.library.jar = src/
