--- a/kotlin/.classpath
+++ b/kotlin/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="kotlin-reflect-1.0.6.jar"/>
-	<classpathentry kind="lib" path="kotlin-stdlib-1.1.2-2.jar"/>
-	<classpathentry kind="lib" path="kotlin-stdlib-jre7-1.1.2-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="kotlin-reflect-1.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="kotlin-stdlib-1.1.2-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="kotlin-stdlib-jre7-1.1.2-2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
