fix view in FskPortObject

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -14,13 +14,13 @@ bin.includes = plugin.xml,\
                libs/pmfml-0.0.11.jar,\
                libs/fskml-1.0.5.jar,\
                libs/jackson-module-kotlin-2.8.7.jar,\
-               libs/rakip_editor-0.0.3a0.jar,\
                libs/rakip_models-0.0.1a3.jar,\
-               library.jar
-bin.excludes = libs/rakip_editor-0.0.3a0-sources.jar,\
-               libs/rakip_editor-0.0.3a0-javadoc.jar,\
-               libs/rakip_models-0.0.1a3-javadoc.jar,\
-               libs/rakip_models-0.0.1a3-sources.jar
+               library.jar,\
+               libs/rakip_editor-0.0.6a1.jar
+bin.excludes = libs/rakip_models-0.0.1a3-javadoc.jar,\
+               libs/rakip_models-0.0.1a3-sources.jar,\
+               libs/rakip_editor-0.0.6a1-javadoc.jar,\
+               libs/rakip_editor-0.0.6a1-sources.jar
 jars.compile.order = library.jar
 output.library.jar = bin/
 source.library.jar = deprecated-src/,\
