--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -37,6 +37,11 @@
     <node
       category-path="/fsklab"
       deprecated="false"
+      factory-class="de.bund.bfr.knime.fsklab.nodes.rakip.reader.NodeFactory">
+    </node>
+    <node
+      category-path="/fsklab"
+      deprecated="false"
       factory-class="de.bund.bfr.knime.fsklab.nodes.rakip.writer.NodeFactory">
     </node>
     
@@ -54,7 +59,7 @@
     <node
       category-path="/fsklab"
       deprecated="true"
-      factory-class="de.bund.bfr.knime.fsklab.nodes.rakip.writer.FskxWriterNodeFactory">
+      factory-class="de.bund.bfr.knime.fsklab.nodes.writer.FskxWriterNodeFactory">
     </node>
     <node
       category-path="/fsklab"
