--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -44,6 +44,11 @@
       deprecated="false"
       factory-class="de.bund.bfr.knime.fsklab.nodes.rakip.writer.NodeFactory">
     </node>
+    <node
+      category-path="/fsklab"
+      deprecated="false"
+      factory-class="de.bund.bfr.knime.fsklab.nodes.rakip.runner.NodeFactory">
+    </node>
     
     <!-- deprecated nodes -->
     <node
