--- a/.project
+++ b/.project
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>kotlin</name>
-	<comment></comment>
+	<comment>kotlin_toy</comment>
 	<projects>
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>org.eclipse.pde.ManifestBuilder</name>
+			<name>org.jetbrains.kotlin.ui.kotlinBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.eclipse.pde.SchemaBuilder</name>
+			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.pde.PluginNature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.jetbrains.kotlin.core.kotlinNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>kotlin_bin</name>
+			<type>2</type>
+			<locationURI>org.jetbrains.kotlin.core.filesystem:/kotlin_toy/kotlin_bin</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
