Kotlin version of Creator node is loaded

--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/build.properties
@@ -1,4 +1,8 @@
 source.. = src/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               fskml-1.0.5.jar,\
+               jackson-module-kotlin-2.8.7.jar,\
+               rakip_editor-0.0.6a1.jar,\
+               rakip_models-0.0.1a3.jar
