--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="lib" path="rakip_models-0.0.1a3.jar"/>
 	<classpathentry kind="lib" path="jackson-module-kotlin-2.8.7.jar"/>
 	<classpathentry kind="lib" path="rakip_editor-0.0.6a1.jar"/>
+	<classpathentry kind="lib" path="fskml-1.0.5.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/de.bund.bfr.knime.fsklab.nodes"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
