--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/.classpath
@@ -4,10 +4,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.jetbrains.kotlin.core.KOTLIN_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="rakip_models-0.0.1a3.jar"/>
-	<classpathentry kind="lib" path="jackson-module-kotlin-2.8.7.jar"/>
-	<classpathentry kind="lib" path="rakip_editor-0.0.6a1.jar"/>
-	<classpathentry kind="lib" path="fskml-1.0.5.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/de.bund.bfr.knime.fsklab.nodes"/>
+	<classpathentry kind="lib" path="libs/fskml-1.0.5.jar"/>
+	<classpathentry kind="lib" path="libs/jackson-module-kotlin-2.8.7.jar"/>
+	<classpathentry kind="lib" path="libs/rakip_editor-0.0.6a1.jar"/>
+	<classpathentry kind="lib" path="libs/rakip_models-0.0.1a3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
