--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/build.properties
@@ -2,7 +2,7 @@ source.. = src/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               fskml-1.0.5.jar,\
-               jackson-module-kotlin-2.8.7.jar,\
-               rakip_editor-0.0.6a1.jar,\
-               rakip_models-0.0.1a3.jar
+               libs/jackson-module-kotlin-2.8.7.jar,\
+               libs/rakip_editor-0.0.6a1.jar,\
+               libs/rakip_models-0.0.1a3.jar,\
+               libs/fskml-1.0.5.jar
