--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/build.properties
@@ -5,4 +5,6 @@ bin.includes = META-INF/,\
                libs/jackson-module-kotlin-2.8.7.jar,\
                libs/rakip_editor-0.0.6a1.jar,\
                libs/rakip_models-0.0.1a3.jar,\
-               libs/fskml-1.0.5.jar
+               libs/fskml-1.0.5.jar,\
+               libs/rengine-1.8.4.jar,\
+               libs/rserve-engine-1.8.4.jar
