fix NoClassDefFoundException: JDateChooser

--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="libs/rakip_models-0.0.1a3.jar"/>
 	<classpathentry kind="lib" path="libs/rengine-1.8.4.jar"/>
 	<classpathentry kind="lib" path="libs/rserve-engine-1.8.4.jar"/>
+	<classpathentry kind="lib" path="libs/jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
