--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                libs/rakip_models-0.0.1a3.jar,\
                libs/fskml-1.0.5.jar,\
                libs/rengine-1.8.4.jar,\
-               libs/rserve-engine-1.8.4.jar
+               libs/rserve-engine-1.8.4.jar,\
+               libs/jcalendar-1.4.jar
