--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/plugin.xml
@@ -10,7 +10,7 @@
             objectClass="de.bund.bfr.knime.fsklab.FskPortObject"
             objectSerializer="de.bund.bfr.knime.fsklab.FskPortObjectSerializer"
             specClass="de.bund.bfr.knime.fsklab.FskPortObjectSpec"
-            specSerializer="de.bund.bfr.knime.fsklab.nodes.rakip.port.FskPortObjectSpec$Serializer">
+            specSerializer="de.bund.bfr.knime.fsklab.FskPortObjectSpec$Serializer">
       </portType>
    </extension>
    <extension point="org.knime.workbench.repository.nodes">
