--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/plugin.xml
@@ -17,6 +17,7 @@
       <node deprecated="false" factory-class="de.bund.bfr.knime.fsklab.nodes.CreatorNodeFactory"></node>
       <node deprecated="false" factory-class="de.bund.bfr.knime.fsklab.nodes.RunnerNodeFactory"></node>
       <node deprecated="false" factory-class="de.bund.bfr.knime.fsklab.nodes.ReaderNodeFactory"></node>
+      <node deprecated="false" factory-class="de.bund.bfr.knime.fsklab.nodes.WriterNodeFactory"></node>
    </extension>
 
 </plugin>
