--- a/de.bund.bfr.knime.fsklab.nodes.kotlin/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes.kotlin/plugin.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+
+  <!-- Preference initializer for custom R -->
+  <extension id="de.bund.bfr.knime.fsklab.nodes.RPreferenceInitializer" point="org.eclipse.core.runtime.preferences">
+	<initializer class="de.bund.bfr.knime.fsklab.nodes.RPreferenceInitializer" />
+  </extension>
+  
+    <!-- Preference page for custom R -->
+  <extension point="org.eclipse.ui.preferencePages">
+	<page category="org.knime.workbench.ui.preferences" class="de.bund.bfr.knime.fsklab.nodes.RPreferencePage"
+		id="de.bund.bfr.knime.fsklab.nodes.RPreferencePage" name="BfR R settings" />
+  </extension>
+
    <extension
          point="org.knime.core.PortType">
       <portType
@@ -13,6 +25,7 @@
             specSerializer="de.bund.bfr.knime.fsklab.FskPortObjectSpec$Serializer">
       </portType>
    </extension>
+   
    <extension point="org.knime.workbench.repository.nodes">
       <node deprecated="false" factory-class="de.bund.bfr.knime.fsklab.nodes.CreatorNodeFactory"></node>
       <node deprecated="false" factory-class="de.bund.bfr.knime.fsklab.nodes.RunnerNodeFactory"></node>
