--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="rakip_models-0.0.1a3.jar"/>
+	<classpathentry kind="lib" path="jackson-module-kotlin-2.8.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
