fsk creator (RAKIP enabled)

--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="rakip_models-0.0.1a3.jar"/>
 	<classpathentry kind="lib" path="jackson-module-kotlin-2.8.7.jar"/>
+	<classpathentry kind="lib" path="fskml-1.0.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
