--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -1,4 +1,5 @@
 bin.includes = META-INF/,\
                rakip_models-0.0.1a3.jar,\
                jackson-module-kotlin-2.8.7.jar,\
-               plugin.xml
+               plugin.xml,\
+               fskml-1.0.7.jar
