fix creator and runner icons

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -2,4 +2,8 @@ bin.includes = META-INF/,\
                rakip_models-0.0.1a3.jar,\
                jackson-module-kotlin-2.8.7.jar,\
                plugin.xml,\
-               fskml-1.0.7.jar
+               fskml-1.0.7.jar,\
+               .
+source.. = src/,\
+           resources/
+output.. = bin/
