add libraries (JAR) to classpath

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -3,7 +3,9 @@ bin.includes = META-INF/,\
                jackson-module-kotlin-2.8.7.jar,\
                plugin.xml,\
                fskml-1.0.7.jar,\
-               .
+               .,\
+               CombineArchive-1.1.jar,\
+               jdom-2.0.1.jar
 source.. = src/,\
            resources/
 output.. = bin/
