--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -1,11 +1,11 @@
 bin.includes = META-INF/,\
-               rakip_models-0.0.1a3.jar,\
-               jackson-module-kotlin-2.8.7.jar,\
+               libs/rakip_models-0.0.1a3.jar,\
+               libs/jackson-module-kotlin-2.8.7.jar,\
                plugin.xml,\
-               fskml-1.0.7.jar,\
+               libs/fskml-1.0.7.jar,\
                .,\
-               CombineArchive-1.1.jar,\
-               jdom-2.0.1.jar
+               libs/CombineArchive-1.1.jar,\
+               libs/jdom-2.0.1.jar
 source.. = src/,\
            resources/
 output.. = bin/
