--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -6,7 +6,9 @@ bin.includes = META-INF/,\
                libs/jdom-2.0.1.jar,\
                libs/jcalendar-1.4.jar,\
                libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
-               libs/pmfml-0.0.11.jar
+               libs/pmfml-0.0.11.jar,\
+               libs/rengine-1.8.4.jar,\
+               libs/rserve-engine-1.8.4.jar
 source.. = src/,\
            resources/,\
            deprecated-src/
