--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="libs/ez-vcard-0.10.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/freemarker-2.3.23.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-core-2.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jsoup-1.8.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/vinnie-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/rengine-1.8.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/rserve-engine-1.8.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
