--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -8,7 +8,12 @@ bin.includes = META-INF/,\
                libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
                libs/pmfml-0.0.11.jar,\
                libs/rengine-1.8.4.jar,\
-               libs/rserve-engine-1.8.4.jar
+               libs/rserve-engine-1.8.4.jar,\
+               libs/ez-vcard-0.10.2.jar,\
+               libs/freemarker-2.3.23.jar,\
+               libs/jackson-core-2.6.1.jar,\
+               libs/jsoup-1.8.3.jar,\
+               libs/vinnie-2.0.0.jar
 source.. = src/,\
            resources/,\
            deprecated-src/
