--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -13,7 +13,8 @@ bin.includes = META-INF/,\
                libs/freemarker-2.3.23.jar,\
                libs/jackson-core-2.6.1.jar,\
                libs/jsoup-1.8.3.jar,\
-               libs/vinnie-2.0.0.jar
+               libs/vinnie-2.0.0.jar,\
+               libs/jris-1.0.0.jar
 source.. = src/,\
            resources/,\
            deprecated-src/
